--- a/Kitodo/src/main/webapp/pages/modules.xhtml
+++ b/Kitodo/src/main/webapp/pages/modules.xhtml
@@ -23,7 +23,7 @@
 
     <ui:define name="pageTabView">
         <p:tabView id="modulesTabView">
-            <p:tab id="modulesTab" title="#{msgs.taskmanager}">
+            <p:tab id="modulesTab" title="#{msgs.taskManager}">
                 <p:dataTable var="item"
                              value="#{LongRunningTasksForm.tasks}">
                     <p:column headerText="#{msgs.titel}">
