--- a/Kitodo/src/main/webapp/pages/projectEditMetsPopup.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEditMetsPopup.xhtml
@@ -58,7 +58,7 @@
                     <p:commandButton action="#{ProjekteForm.saveFileGroup()}"
                                      update="editForm"
                                      oncomplete="PF('editFileGroupDialog').hide();jQuery('#editForm\\:saveButtonToggler').click()"
-                                     value="#{msgs.uebernehmen}"
+                                     value="#{msgs.apply}"
                                      styleClass="button-filled-blue right"/>
                     <p:commandButton value="#{msgs.cancel}"
                                      onclick="PF('editFileGroupDialog').hide()"/>
