--- a/Kitodo/src/main/webapp/pages/templateEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/templateEdit.xhtml
@@ -54,7 +54,7 @@
             <p:tab title="#{msgs.templateDetails}" id="details">
                 <ui:include src="/WEB-INF/templates/includes/templateEdit/details.xhtml"/>
             </p:tab>
-            <p:tab title="#{msgs.arbeitsschritte}" id="taskOrder">
+            <p:tab title="#{msgs.taskList}" id="taskOrder">
                 <ui:include src="/WEB-INF/templates/includes/templateEdit/taskList.xhtml"/>
             </p:tab>
         </p:tabView>
