--- a/Kitodo/src/main/webapp/pages/activeUsers.xhtml
+++ b/Kitodo/src/main/webapp/pages/activeUsers.xhtml
@@ -17,7 +17,7 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui">
     <ui:define name="contentHeader">
-        <h3>#{msgs.aktiveBenutzer}</h3>
+        <h3>#{msgs.activeUsers}</h3>
     </ui:define>
 
     <ui:define name="pageTabView">
@@ -29,7 +29,7 @@
                         <p:column id="userName" headerText="#{msgs.user}">
                             <h:outputText value="#{userItem.userName}"/>
                         </p:column>
-                        <p:column id="lastRequest" headerText="#{msgs.letzterZugriff}">
+                        <p:column id="lastRequest" headerText="#{msgs.lastAccess}">
                             <h:outputText value="#{userItem.lastRequest}"/>
                         </p:column>
                     </p:dataTable>
@@ -40,6 +40,6 @@
 
     <ui:define name="breadcrumbs">
         <li><h:link value="#{msgs.startPage}" outcome="start"/></li>
-        <li><a href="">#{msgs.aktiveBenutzer}</a></li>
+        <li><a href="">#{msgs.activeUsers}</a></li>
     </ui:define>
 </ui:composition>
