--- a/Kitodo/src/main/webapp/pages/processFromTemplate.xhtml
+++ b/Kitodo/src/main/webapp/pages/processFromTemplate.xhtml
@@ -41,10 +41,10 @@
             <p:tab id="processDataTab" title="#{msgs.processData}">
                 <ui:include src="/WEB-INF/templates/includes/processFromTemplate/processDataEdit.xhtml" />
             </p:tab>
-            <p:tab id="additionalDetailsTab" title="#{msgs.zusaetzlicheDetails}">
+            <p:tab id="additionalDetailsTab" title="#{msgs.additionalDetails}">
                 <ui:include src="/WEB-INF/templates/includes/processFromTemplate/processAdditionalDataEdit.xhtml" />
             </p:tab>
-            <p:tab id="searchTab" title="#{msgs.suche}">
+            <p:tab id="searchTab" title="#{msgs.search}">
                 <ui:include src="/WEB-INF/templates/includes/processFromTemplate/processSearchEdit.xhtml" />
             </p:tab>
         </p:tabView>
