Use fixed messages

--- a/Kitodo/src/main/webapp/pages/error.xhtml
+++ b/Kitodo/src/main/webapp/pages/error.xhtml
@@ -57,7 +57,7 @@
                             <h:form id="myform" style="margin:3px">
                                 <!-- Überschrift -->
                                 <h3>
-                                    <h:outputText id="id5" value="#{msgs.esIstEinFehlerAufgetreten}"/>
+                                    <h:outputText id="id5" value="#{msgs.errorOccurred}"/>
                                 </h3>
 
                                 <!-- TODO: refactor template to replace JAVA scriptlet -->
@@ -115,7 +115,7 @@
                                 <!--<%-->
                                 <!--} else {-->
                                 <!--%>-->
-                                <!--<h:outputText id="id6" value="#{msgs.unbekannterFehler}"/>-->
+                                <!--<h:outputText id="id6" value="#{msgs.error}"/>-->
                                 <!--<%-->
                                 <!--}-->
                                 <!--%>-->
