--- a/Kitodo/src/main/webapp/pages/incMeta/dialogs/dialogAddDocStrucType.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/dialogs/dialogAddDocStrucType.xhtml
@@ -47,7 +47,7 @@
 
                 <h:panelGroup>
                     <p:selectOneRadio layout="grid" columns="1" value="#{Metadaten.addServeralStructuralElementsMode}">
-                        <f:selectItem itemLabel="#{msgs.seitenzuordnung}" itemValue="#{false}" />
+                        <f:selectItem itemLabel="#{msgs.pageAllocation}" itemValue="#{false}" />
                         <f:selectItem itemLabel="#{msgs.metadata}" itemValue="#{true}" />
                         <p:ajax event="click" update="AddDocStrucTypeSpecs" />
                     </p:selectOneRadio>
