--- a/Kitodo/src/main/webapp/pages/projects.xhtml
+++ b/Kitodo/src/main/webapp/pages/projects.xhtml
@@ -55,7 +55,7 @@
             <p:tab title="#{msgs.dockets}" id="docketTab">
                 <ui:include src="/WEB-INF/templates/includes/projects/docketList.xhtml"/>
             </p:tab>
-            <p:tab title="#{msgs.regelsaetze}" id="rulesetTab">
+            <p:tab title="#{msgs.rulesets}" id="rulesetTab">
                 <ui:include src="/WEB-INF/templates/includes/projects/rulesetList.xhtml"/>
             </p:tab>
         </p:tabView>
