--- a/Kitodo/src/main/webapp/pages/tasks.xhtml
+++ b/Kitodo/src/main/webapp/pages/tasks.xhtml
@@ -18,7 +18,7 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:p="http://primefaces.org/ui">
     <ui:define name="contentHeader">
-        <h3>#{msgs.aktuelleSchritte}</h3>
+        <h3>#{msgs.tasksCurrent}</h3>
     </ui:define>
 
     <ui:define name="pageTabView">
