--- a/Kitodo/src/main/webapp/pages/incMeta/metadataEditorHeader.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/metadataEditorHeader.xhtml
@@ -16,7 +16,7 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui">
     <p:panel styleClass="content-header">
-        <h3>#{msgs.metadatenBearbeiten}</h3>
+        <h3>#{msgs.metadataEdit}</h3>
         <h:form id="buttons">
             <p:blockUI block="tabView" trigger="saveBtn,saveAndBackBtn">
                 Saving <br/>
