--- a/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
+++ b/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
@@ -29,7 +29,7 @@
                     <p:layoutUnit position="center">
                         <ui:include src="/pages/incMeta/metadataCenter.xhtml" />
                     </p:layoutUnit>
-                    <p:layoutUnit position="east" size="300" resizable="true" header="#{msgs.metadatenBildAnzeigen}" collapsible="true">
+                    <p:layoutUnit position="east" size="300" resizable="true" header="#{msgs.metadataShowImage}" collapsible="true">
                         <ui:include src="/pages/incMeta/imageContol.xhtml" />
                     </p:layoutUnit>
                 </p:layout>
@@ -39,6 +39,6 @@
     <ui:define name="breadcrumbs">
             <li><h:link value="#{msgs.startPage}" outcome="start"/></li>
             <li><h:link value="#{msgs.processes}" outcome="processes"/></li>
-            <li><a href="">#{msgs.metadatenBearbeiten}</a></li>
+            <li><a href="">#{msgs.metadataEdit}</a></li>
     </ui:define>
 </ui:composition>
