--- a/Kitodo/src/main/webapp/pages/login.xhtml
+++ b/Kitodo/src/main/webapp/pages/login.xhtml
@@ -15,13 +15,12 @@
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
       xmlns:sec="http://www.springframework.org/security/tags"
       >
     <ui:define name="header">
         <div class="wrapper">
-            <section id="portal-logo">
-                <h:graphicImage name="images/kitodo-logo.svg" alt="Kitodo.Production" width="160"/>
+            <section id="portal-logo" class="login-screen">
+                <h:graphicImage name="images/kitodo-logo.svg" alt="Kitodo.Production" width="160" id="kitodo-logo"/>
                 <h:graphicImage name="images/kitodo-icon.svg" alt="Kitodo.Production" width="40" id="kitodo-icon"/>
             </section>
         </div>
@@ -32,8 +31,8 @@
     </ui:define>
 
     <ui:define name="content">
-        <p:panel id="listWrapper">
-            <p:panel styleClass="content-header" style="height:auto;">
+        <div class="wrapper">
+            <section id="login-section">
                 <sec:authorize access="isAuthenticated()">
                     <h:panelGrid columns="2" width="100%" style="margin-bottom:0px;">
                         <h:panelGroup>
@@ -50,41 +49,34 @@
                 </sec:authorize>
 
                 <sec:authorize access="isAnonymous()">
-                    <h:panelGrid columns="1" width="90%"
-                                 styleClass="loginBorder login-box">
-                        <h:panelGroup id="logintable" styleClass="login-form">
+                    <h3>#{msgs.pleaseSignIn}</h3>
+                    <form action="${request.contextPath}/login" method="POST">
+                        <font color="red">
+                            <h:outputText value="${SPRING_SECURITY_LAST_EXCEPTION.localizedMessage}"/>
+                        </font>
+                        <div>
+                            <label>#{msgs.username}</label><input id="username" type="text" name="username"/>
+                        </div>
+                        <div>
+                            <label>#{msgs.password}</label><input id="password" type="password" name="password"/>
+                        </div>
+                        <button id="login" aria-disabled="false"><span class="button-text">#{msgs.signIn}</span> <span class="ui-icon ui-c fa fa-sign-in fa-lg"/></button>
+                        <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
+                    </form>
 
-                            <form action="${request.contextPath}/login" method="POST">
-                                <font color="red">
-                                    <h:outputText value="${SPRING_SECURITY_LAST_EXCEPTION.message}"/>
-                                </font>
-                                <h:panelGrid columns="2" style="">
-                                    <h:outputText value="#{msgs.login}"/>
-                                    <h:panelGroup>
-                                        <input id="username" type="text" name="username"/>
-                                    </h:panelGroup>
+                    <div class="login-note">
+                        #{msgs.loginNoteText}
+                    </div>
 
-                                    <h:outputText value="#{msgs.password}"/>
-                                    <h:panelGroup>
-                                        <input id="password" type="password" name="password"/>
-                                    </h:panelGroup>
+                    <h:panelGroup
+                            rendered="#{LoginForm.myBenutzer == null and LoginForm.alreadyLoggedIn}">
 
-                                </h:panelGrid>
-                                <input id="login" type="submit" value="Login"/>
-                                <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
-                            </form>
-                        </h:panelGroup>
-
-                        <h:panelGroup
-                                rendered="#{LoginForm.myBenutzer == null and LoginForm.alreadyLoggedIn}">
-
-                            <h:outputText value="#{msgs.sieSindBereitsEingeloggt}"/>
-                            <br/>
-                        </h:panelGroup>
-                    </h:panelGrid>
+                        <h:outputText value="#{msgs.sieSindBereitsEingeloggt}"/>
+                        <br/>
+                    </h:panelGroup>
                 </sec:authorize>
-            </p:panel>
-        </p:panel>
+            </section>
+        </div>
     </ui:define>
 
 </ui:composition>
