Replace reamins of titel with title

--- a/Kitodo/src/main/webapp/pages/docketEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/docketEdit.xhtml
@@ -60,11 +60,11 @@
                 <p:panelGrid id="docket-grid" columns="2" layout="grid">
                     <p:row>
                         <div>
-                            <p:outputLabel for="title" value="#{msgs.titel}"/>
+                            <p:outputLabel for="title" value="#{msgs.title}"/>
                             <p:inputText id="title"
                                          class="input"
                                          value="#{DocketForm.myDocket.title}"
-                                         placeholder="#{msgs.titel}"
+                                         placeholder="#{msgs.title}"
                                          required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
