--- a/Kitodo/src/main/webapp/pages/modules.xhtml
+++ b/Kitodo/src/main/webapp/pages/modules.xhtml
@@ -26,7 +26,7 @@
             <p:tab id="modulesTab" title="#{msgs.taskManager}">
                 <p:dataTable var="item"
                              value="#{LongRunningTasksForm.tasks}">
-                    <p:column headerText="#{msgs.titel}">
+                    <p:column headerText="#{msgs.title}">
                         <h:outputText value="#{item.name}"/>
                     </p:column>
                     <p:column headerText="#{msgs.progress}">
