--- a/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
@@ -75,12 +75,12 @@
                 <p:panelGrid columns="1" layout="grid">
                     <p:row>
                         <div>
-                            <p:outputLabel for="titleInput" value="#{msgs.titel}"/>
+                            <p:outputLabel for="titleInput" value="#{msgs.title}"/>
                             <p:inputText id="titleInput"
                                          class="input"
                                          disabled="#{isViewMode}"
                                          value="#{BenutzergruppenForm.userGroup.title}"
-                                         placeholder="#{msgs.titel}"
+                                         placeholder="#{msgs.title}"
                                          required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
