--- a/Kitodo/src/main/webapp/pages/ldapgroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/ldapgroupEdit.xhtml
@@ -68,7 +68,7 @@
                 <p:panelGrid columns="2" layout="grid">
                     <p:row>
                         <div>
-                            <p:outputLabel for="title" value="#{msgs.titel}"/>
+                            <p:outputLabel for="title" value="#{msgs.title}"/>
                             <p:inputText id="title"
                                          class="input"
                                          value="#{LdapGruppenForm.myLdapGruppe.title}"
