Adjust id of elements to use it selenium tests

--- a/Kitodo/src/main/webapp/pages/projectEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEdit.xhtml
@@ -49,7 +49,7 @@
     </ui:define>
 
     <ui:define name="pageTabView">
-        <p:tabView id="tabs">
+        <p:tabView id="projectTabView">
             <p:tab title="#{msgs.details}">
                 <ui:include src="/WEB-INF/templates/includes/projectEdit/projectEditDetail.xhtml"/>
             </p:tab>
