Warn user about unsaved changes when leaving edit pages

--- a/Kitodo/src/main/webapp/pages/docketEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/docketEdit.xhtml
@@ -41,7 +41,7 @@
                          iconPos="right"
                          styleClass="button-filled-blue"
                          disabled="#{DocketForm.saveDisabled}"
-                         onclick="PF('notifications').renderMessage({
+                         onclick="setConfirmUnload(false);PF('notifications').renderMessage({
                             'summary':'#{msgs.docketSaving}',
                             'detail':'#{msgs.youWillBeRedirected}',
                             'severity':'info'});"/>
@@ -49,7 +49,7 @@
                          actionListener="#{DocketForm.setSaveDisabled(false)}"
                          update="save"
                          style="display:none;"/>
-        <p:button id="cancel" value="#{msgs.cancel}"
+        <p:button id="cancel" value="#{msgs.cancel}" onclick="setConfirmUnload(false);"
                   outcome="projects.jsf?id=#{ProjekteForm.activeTabIndex}"
                   icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
     </ui:define>
