--- a/Kitodo/src/main/webapp/pages/tasks.xhtml
+++ b/Kitodo/src/main/webapp/pages/tasks.xhtml
@@ -52,21 +52,21 @@
                         <h:form>
                             <!-- assign task -->
                             <h:commandLink id="take" action="#{AktuelleSchritteForm.schrittDurchBenutzerUebernehmen}"
-                                           rendered="#{(item.processingStatus == 'OPEN' and !item.batchStep) || (item.processingStatus == 'OPEN' and item.batchStep and !item.batchSize)}"
+                                           rendered="#{(item.processingStatus == 'OPEN' and !item.batchStep) || (item.processingStatus == 'OPEN' and item.batchStep and !item.batchAvailable)}"
                                            title="#{msgs.bearbeitungDiesesSchrittsUebernehmen}">
                                 <i class="fa fa-bell-o"/>
                                 <f:setPropertyActionListener target="#{AktuelleSchritteForm.currentTask}" value="#{AktuelleSchritteForm.getTaskById(item.id)}"/>
                             </h:commandLink>
                             <!-- already assigned task (this user) -->
                             <h:link outcome="/pages/currentTasksEdit"
-                                    rendered="#{(item.processingStatus == 'INWORK' and item.processingUser.id == LoginForm.myBenutzer.id and !item.batchStep) || (item.processingStatus == 'INWORK' and item.processingUser.id == LoginForm.myBenutzer.id and item.batchStep and !item.batchSize)}"
+                                    rendered="#{(item.processingStatus == 'INWORK' and item.processingUser.id == LoginForm.myBenutzer.id and !item.batchStep) || (item.processingStatus == 'INWORK' and item.processingUser.id == LoginForm.myBenutzer.id and item.batchStep and !item.batchAvailable)}"
                                     title="#{msgs.inBearbeitungDurch}: #{item.processingUser!=null and item.processingUser.id!=0 ? item.processingUser.fullName:''}">
                                 <i class="fa fa-bell"/>
                                 <f:param name="id" value="#{item.id}"/>
                             </h:link>
                             <!-- already assigned task (different user) -->
                             <h:commandLink action="#{AktuelleSchritteForm.editStep}" id="view2"
-                                           rendered="#{item.processingStatus == 'INWORK' and item.processingUser.id != LoginForm.myBenutzer.id and (!item.batchStep || !item.batchSize)}"
+                                           rendered="#{item.processingStatus == 'INWORK' and item.processingUser.id != LoginForm.myBenutzer.id and (!item.batchStep || !item.batchAvailable)}"
                                            title="#{msgs.inBearbeitungDurch}: #{(item.processingUser!=null and item.processingUser.id!=0 ? item.processingUser.fullName : '')}">
                                 <i class="fa fa-bell-slash"/>
                                 <f:setPropertyActionListener target="#{AktuelleSchritteForm.currentTask}" value="#{item}"/>
@@ -74,7 +74,7 @@
 
                             <!-- take over batch -->
                             <h:commandLink id="batch" action="#{AktuelleSchritteForm.takeOverBatch}"
-                                           rendered="#{item.processingStatus == 'OPEN' and item.batchStep and item.batchSize}"
+                                           rendered="#{item.processingStatus == 'OPEN' and item.batchStep and item.batchAvailable}"
                                            title="#{msgs.bearbeitungDiesesSchrittsUebernehmen}">
                                 <h:graphicImage value="/pages/images/buttons/admin3a.gif" alt="edit"/>
                                 <f:setPropertyActionListener target="#{AktuelleSchritteForm.currentTask}" value="#{item}"/>
@@ -82,7 +82,7 @@
 
                             <!-- edit batch step (this user) -->
                             <h:commandLink id="batchInWork" action="#{AktuelleSchritteForm.batchesEdit}"
-                                           rendered="#{item.processingStatus == 'INWORK' and item.processingUser.id == LoginForm.myBenutzer.id and item.batchStep and item.batchSize}"
+                                           rendered="#{item.processingStatus == 'INWORK' and item.processingUser.id == LoginForm.myBenutzer.id and item.batchStep and item.batchAvailable}"
                                            title="#{msgs.bearbeitungDiesesSchrittsUebernehmen}">
                                 <h:graphicImage value="/pages/images/buttons/admin3.gif" alt="edit"/>
                                 <f:setPropertyActionListener target="#{AktuelleSchritteForm.currentTask}" value="#{item}"/>
@@ -90,7 +90,7 @@
 
                             <!-- edit batch step (different user) -->
                             <h:commandLink id="batchInWorkOther" action="#{AktuelleSchritteForm.batchesEdit}"
-                                           rendered="#{item.processingStatus == 'INWORK' and item.processingUser.id != LoginForm.myBenutzer.id and item.batchStep and item.batchSize}"
+                                           rendered="#{item.processingStatus == 'INWORK' and item.processingUser.id != LoginForm.myBenutzer.id and item.batchStep and item.batchAvailable}"
                                            title="#{msgs.inBearbeitungDurch}: #{(item.processingUser!=null and item.processingUser.id!=0 ? item.processingUser.fullName : '')}">
                                 <h:graphicImage value="/pages/images/buttons/admin3c.gif" alt="edit"/>
                                 <f:setPropertyActionListener target="#{AktuelleSchritteForm.currentTask}" value="#{item}"/>
